--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 baseurl = "https://rnotlari.netlify.app"  # Include trailing slash
 title = "R Notları"
 author = "Hakan Hekim"
-copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
+copyright = "Copyright © 2020, Hakan Hekim; all rights reserved."
 #canonifyurls = true
 paginate = 10
 theme = "hugo-clarity"
@@ -59,7 +59,7 @@ ga_analytics = "G-JJ5NKD59D1"
 numberOfTagsShown = 14 # Applies for all other default & custom taxonomies. e.g categories, brands see https://gohugo.io/content-management/taxonomies#what-is-a-taxonomy
 
 # will be used on share >> twitter, facebook, linkedin
-fallBackOgImage = "images/thumbnail.png"
+fallBackOgImage = "logos/logo.png"
 
 # sets the maximum number of lines per codeblock. The codeblock will however be scrollable and expandable.
 codeMaxLines = 7
