Google Analytics update

--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ introDescription = "Technologist, perpetual student, teacher, continual incremen
 # description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
 
 # Google analytics Id
-ga_analytics = "G-JJ5NKD59D1"
+ga_analytics = "G-ZDJH6NND0E"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
