--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ introDescription = "Technologist, perpetual student, teacher, continual incremen
 # description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
 
 # Google analytics Id
-ga_analytics = "G-ZDJH6NND0E"
+ga_analytics = "G-PBT333V3VF"
 
 # Baidu analytics Id
 # baidu_analytics = "XXXXXXXX"
@@ -92,8 +92,8 @@ mobileNavigation = "left" # if you prefer right change to 'right'
 
 # please also not that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
 
-enforceLightMode = false
-# enforceDarkMode = false
+# enforceLightMode = false
+ enforceDarkMode = true
 
 # Text for the languages menu.
 # languageMenuName = "🌐"
