--- a/config/_default/menus/menu.en.toml
+++ b/config/_default/menus/menu.en.toml
@@ -27,7 +27,7 @@
   url = "about/"
   weight = -107
   
-[[main]]
-  name = "HH"
-  url = "cv/"
-  weight = -104
+#[[main]]
+#  name = "HH"
+#  url = "cv/"
+#  weight = -104
