google analytics update

--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ introDescription = "Technologist, perpetual student, teacher, continual incremen
 # description = "" # set your site's description here. will be use for home page content meta tags (seo). Alternatively set this description in your homepage content file i.e content/_index.md. Whatever is set in the latter will take precedence
 
 # Google analytics Id
-ga_analytics = "G-PBT333V3VF"
+ga_analytics = "G-EPWKZ9WYJJ"
 
 
 # Baidu analytics Id
