featured post update

--- a/config.toml
+++ b/config.toml
@@ -108,7 +108,7 @@ mobileNavigation = "left" # if you prefer right change to 'right'
 # numberOfRecentPosts = 8
 
 # Maximum number of featured posts.
-# numberOfFeaturedPosts = 8
+ numberOfFeaturedPosts = 11
 
 # Date format. Checkout https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference for details.
 # dateFormat = "2006-01-02" # Default to "Jan 2, 2006".
